[package]
name = "my-rusty-chip-8"
version = "0.1.0"
authors = ["ashton0223 <30986310+ashton0223@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"
rand = "0.8.0"
soloud = "0.2"
nfd = "0.0.4"